--- a/src/Pandas_Series_Day9.ipynb/GradeFliter.ipynb
+++ b/src/Pandas_Series_Day9.ipynb/GradeFliter.ipynb
@@ -2,10 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1495fb73-cf81-46da-9fc0-455a18e6ace6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Series:\n",
+      "0    85.0\n",
+      "1     NaN\n",
+      "2    92.0\n",
+      "3    45.0\n",
+      "4     NaN\n",
+      "5    78.0\n",
+      "6    55.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Missing Values (True means missing):\n",
+      "0    False\n",
+      "1     True\n",
+      "2    False\n",
+      "3    False\n",
+      "4     True\n",
+      "5    False\n",
+      "6    False\n",
+      "dtype: bool\n",
+      "\n",
+      "Series After Filling Missing Values with 0:\n",
+      "0    85.0\n",
+      "1     0.0\n",
+      "2    92.0\n",
+      "3    45.0\n",
+      "4     0.0\n",
+      "5    78.0\n",
+      "6    55.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Scores Greater Than 60:\n",
+      "0    85.0\n",
+      "2    92.0\n",
+      "5    78.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -34,6 +76,14 @@
     "print(\"\\nScores Greater Than 60:\")\n",
     "print(filtered_scores)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fddc4ac8-2228-48f1-9b4e-98a1d5f2247e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
