--- a/src/Day15_Probability_Stats.ipynb/Bayesian_Fliter.ipynb
+++ b/src/Day15_Probability_Stats.ipynb/Bayesian_Fliter.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70703e35-0aef-4d40-be15-5d4f862a2898",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(Free): 0.135\n",
+      "P(Spam | Free): 0.6666666666666667\n"
+     ]
+    }
+   ],
    "source": [
     "# Given probabilities\n",
     "P_spam = 0.10\n",
@@ -23,6 +32,14 @@
     "print(\"P(Free):\", P_free)\n",
     "print(\"P(Spam | Free):\", P_spam_given_free)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "627eda3c-ebae-4be7-87ef-a1027c53eade",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
